# taigae2ee

./: LICENSE  README.md  pyproject.toml
taigae2ee/: __init__.py  e2ee.py  key_storage.py
tests/: test_protocol.py
